fix: changed footer contrast
Changed footer text and background contrasts to meet WCAG Contrast specifications

--- a/css/styles.css
+++ b/css/styles.css
@@ -53,8 +53,8 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   min-height: 100%;
 }
 #footer {
-  background-color: #444;
-  color: #aaa;
+  background-color: #333;
+  color: #ccc;
   font-size: 8pt;
   letter-spacing: 1px;
   padding: 25px;
